Mini game 1: Addition of a noughts and crosses simple game

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: rgb(104, 197, 197);
+  min-width: 100vw;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.restart-button {
+  padding: 10px 25px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
+  border: 4px double white;
+  border-radius: 5px;
+  background-color: white;
+  transition: background-color ease-in 0.5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.restart-button:hover {
+  cursor: pointer;
+  background-color: rgb(155, 218, 142);
+}
+
+.restart-button:focus {
+  outline: none;
 }
